--- a/index.html
+++ b/index.html
@@ -18,6 +18,41 @@
         * { box-sizing: border-box; scroll-behavior: smooth; }
         body { font-family: 'Montserrat', sans-serif; margin: 0; background-color: var(--bg-page); color: var(--bg-dark); line-height: 1.6; overflow-x: hidden; }
 
+        /* --- ЯЗЫКОВОЙ ПЕРЕКЛЮЧАТЕЛЬ --- */
+        .header-nav {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            z-index: 100;
+        }
+
+        .lang-toggle {
+            display: flex;
+            background: rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(8px);
+            padding: 5px;
+            border-radius: 30px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .lang-btn {
+            color: var(--white);
+            text-decoration: none;
+            padding: 6px 14px;
+            border-radius: 20px;
+            font-size: 13px;
+            font-weight: 600;
+            transition: var(--transition);
+            opacity: 0.7;
+        }
+
+        .lang-btn:hover { opacity: 1; }
+        .lang-btn.active {
+            background: var(--accent-gold);
+            color: var(--white);
+            opacity: 1;
+        }
+
         /* --- ГЛАВНЫЙ ЭКРАН (HERO) --- */
         .hero {
             position: relative;
@@ -28,7 +63,6 @@
             justify-content: center;
             text-align: center;
             color: var(--white);
-            /* ФОНОВОЕ ФОТО: photo.png */
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('photo.png') no-repeat center center / cover;
         }
 
@@ -108,6 +142,98 @@
             flex-direction: column;
             align-items: center;
         }
+
+        .nav-card:hover { 
+            transform: translateY(-10px); 
+            border-color: var(--accent-gold); 
+            box-shadow: 0 20px 40px rgba(176,141,87,0.15); 
+        }
+
+        .nav-card svg { width: 64px; height: 64px; fill: var(--accent-gold); margin-bottom: 25px; }
+        .nav-card h3 { margin: 0 0 10px; font-size: 24px; font-weight: 700; }
+        .nav-card p { margin: 0; opacity: 0.7; font-size: 1rem; }
+
+        footer { background: var(--bg-dark); color: var(--white); text-align: center; padding: 50px 20px; }
+    </style>
+</head>
+<body>
+
+    <div class="header-nav">
+        <div class="lang-toggle">
+            <a href="https://en.ummahonline.org" class="lang-btn">EN</a>
+            <a href="#" class="lang-btn active">RU</a>
+        </div>
+    </div>
+
+    <section class="hero">
+        <div class="hero-content">
+            <div class="main-logo-box">
+                <img src="logo.png" alt="Logo">
+            </div>
+            <h1>Путь к знаниям и вере</h1>
+            <div class="hero-btns">
+                <a href="quran.html" class="btn-main btn-gold">Священный Коран</a>
+                <a href="azan.html" class="btn-main btn-outline">Время намаза</a>
+                <a href="news.html" class="btn-main btn-outline">Новости</a>
+            </div>
+        </div>
+    </section>
+
+    <main class="container">
+        <div id="daily-ayah-container" class="daily-ayah-card">
+            <h3 style="color:var(--accent-gold); margin-top:0; text-transform: uppercase; font-size: 14px; letter-spacing: 2px;">Аят дня</h3>
+            <div id="ayah-content">
+                <p class="ayah-ar">Загрузка...</p>
+                <p class="ayah-ru">Пожалуйста, подождите</p>
+            </div>
+        </div>
+
+        <div class="section-header">
+            <h2>Сервисы платформы</h2>
+        </div>
+
+        <div class="features-grid">
+            <a href="quran.html" class="nav-card">
+                <svg viewBox="0 0 24 24"><path d="M19 2H5c-1.11 0-2 .9-2 2v16c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 14.5l-3.5-2 3.5-2 3.5 2-3.5 2zM19 8H5V6h14v2z"/></svg>
+                <h3>Коран</h3>
+                <p>Читайте и изучайте суры с переводом</p>
+            </a>
+
+            <a href="azan.html" class="nav-card">
+                <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
+                <h3>Намаз</h3>
+                <p>Узнайте точное время молитвы в вашем городе</p>
+            </a>
+
+            <a href="news.html" class="nav-card">
+                <svg viewBox="0 0 24 24"><path d="M20 5H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm-9 12H5V7h6v10zm9 0h-7v-2h7v2zm0-4h-7v-2h7v2zm0-4h-7V7h7v2z"/></svg>
+                <h3>Новости</h3>
+                <p>Последние события из жизни мусульманской уммы</p>
+            </a>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 Ummah Online. Все права защищены.</p>
+    </footer>
+
+    <script>
+        function loadDailyAyah() {
+            const ayahs = [
+                { ar: "فَاذْكُرُونِي أَذْكُرْكُمْ", ru: "«Поминайте Меня, и Я буду помнить о вас» (2:152)" },
+                { ar: "إِنَّ اللَّهَ مَعَ الصَّابِرِينَ", ru: "«Воистину, Аллах — с терпеливыми» (2:153)" },
+                { ar: "وَقُل رَّبِّ زِدْنِي عِلْمًا", ru: "«И говори: «Господи! Приумножь мои знания» (20:114)" }
+            ];
+            const random = ayahs[Math.floor(Math.random() * ayahs.length)];
+            document.getElementById('ayah-content').innerHTML = `
+                <p class="ayah-ar">${random.ar}</p>
+                <p class="ayah-ru">${random.ru}</p>
+            `;
+        }
+        window.onload = loadDailyAyah;
+    </script>
+</body>
+</html>
 
         .nav-card:hover { 
             transform: translateY(-10px); 
