Update links to Quran and Azan pages

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
                 <span>UMMAH ONLINE</span>
             </a>
             <nav class="nav-links">
-                <a href="quran/quran.html" class="nav-link">Коран</a>
-                <a href="Azan/azan.html" class="nav-link">Времена Молитв</a>
+                <a href="quran.html" class="nav-link">Коран</a>
+                <a href="azan.html" class="nav-link">Времена Молитв</a>
                 <a href="javascript:void(0)" onclick="openAcademyModal()" class="nav-link">Обучение</a>
             </nav>
         </div>
@@ -398,7 +398,7 @@
         </div>
 
         <div class="features-grid">
-            <a href="quran/quran.html" class="card reveal" style="--delay: 0.1s">
+            <a href="quran.html" class="card reveal" style="--delay: 0.1s">
                 <div class="icon-box">
                     <svg viewBox="0 0 24 24"><path d="M19 2H5c-1.11 0-2 .9-2 2v16c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 14.5l-3.5-2 3.5-2 3.5 2-3.5 2zM19 8H5V6h14v2z"/></svg>
                 </div>
