--- a/index.html
+++ b/index.html
@@ -293,41 +293,6 @@
         .card:hover .icon-box { background: var(--accent-gold); transform: rotate(10deg) scale(1.1); }
         .card:hover svg { fill: var(--white); transform: scale(1.1); }
 
-        /* --- MODAL --- */
-        .modal {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(61, 49, 41, 0.8);
-            display: none;
-            align-items: center;
-            justify-content: center;
-            z-index: 2000;
-            backdrop-filter: blur(8px);
-        }
-        .modal-content {
-            background: var(--white);
-            padding: 40px;
-            border-radius: 24px;
-            text-align: center;
-            max-width: 400px;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.3);
-            border: 1px solid var(--accent-gold);
-            animation: zoomIn 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-        }
-        .modal-content h2 { color: var(--bg-dark); margin-bottom: 10px; font-weight: 700; }
-        .close-btn {
-            margin-top: 25px;
-            background: var(--accent-gold);
-            color: var(--white);
-            border: none;
-            padding: 12px 30px;
-            border-radius: 50px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: var(--transition-smooth);
-        }
-        .close-btn:hover { background: var(--bg-dark); transform: scale(1.05); }
-
         /* --- FOOTER --- */
         footer { background: var(--bg-dark); color: var(--white); padding: 80px 20px 40px; text-align: center; }
         .footer-brand { font-size: 1.5rem; font-weight: 700; letter-spacing: 2px; margin-bottom: 30px; display: block; color: var(--accent-gold); }
@@ -365,7 +330,7 @@
             <nav class="nav-links">
                 <a href="quran.html" class="nav-link">Коран</a>
                 <a href="azan.html" class="nav-link">Времена Молитв</a>
-                <a href="javascript:void(0)" onclick="openAcademyModal()" class="nav-link">Обучение</a>
+                <a href="https://markaz.ummahonline.org" target="_blank" class="nav-link">Обучение</a>
             </nav>
         </div>
     </header>
@@ -412,7 +377,7 @@
                 <h3>Время намаза</h3>
                 <p>Точное расписание молитв для вашего местоположения.</p>
             </a>
-            <a href="javascript:void(0)" onclick="openAcademyModal()" class="card reveal" style="--delay: 0.4s">
+            <a href="https://markaz.ummahonline.org" target="_blank" class="card reveal" style="--delay: 0.4s">
                 <div class="icon-box">
                     <svg viewBox="0 0 24 24"><path d="M12 3L1 9l11 6 9-4.91V17h2V9L12 3zM5.89 12.55L12 15.89l6.11-3.34c.66.36 1.1 1.05 1.1 1.84 0 1.16-.94 2.11-2.11 2.11H4.89c-1.16 0-2.11-.94-2.11-2.11 0-.79.44-1.48 1.11-1.84z"/></svg>
                 </div>
@@ -421,15 +386,6 @@
             </a>
         </div>
     </main>
-
-    <!-- MODAL -->
-    <div id="academyModal" class="modal">
-        <div class="modal-content">
-            <h2>Академия</h2>
-            <p>Скоро, ин шаа Аллах</p>
-            <button class="close-btn" onclick="closeAcademyModal()">Закрыть</button>
-        </div>
-    </div>
 
     <footer>
         <div class="footer-content">
@@ -449,9 +405,6 @@
     </footer>
 
     <script>
-        function openAcademyModal() { document.getElementById('academyModal').style.display = 'flex'; }
-        function closeAcademyModal() { document.getElementById('academyModal').style.display = 'none'; }
-
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
