Update descriptions for Quran and Academy sections

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <svg viewBox="0 0 24 24"><path d="M19 2H5c-1.11 0-2 .9-2 2v16c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 14.5l-3.5-2 3.5-2 3.5 2-3.5 2zM19 8H5V6h14v2z"/></svg>
                 </div>
                 <h3>Коран Онлайн</h3>
-                <p>Интерактивное чтение с тафсиром и переводами смыслов.</p>
+                <p>Весь Священный Коран с переводом смыслов.</p>
             </a>
             <a href="azan.html" class="card reveal" style="--delay: 0.25s">
                 <div class="icon-box">
@@ -382,7 +382,7 @@
                     <svg viewBox="0 0 24 24"><path d="M12 3L1 9l11 6 9-4.91V17h2V9L12 3zM5.89 12.55L12 15.89l6.11-3.34c.66.36 1.1 1.05 1.1 1.84 0 1.16-.94 2.11-2.11 2.11H4.89c-1.16 0-2.11-.94-2.11-2.11 0-.79.44-1.48 1.11-1.84z"/></svg>
                 </div>
                 <h3>Академия</h3>
-                <p>Курсы по основам Ислама и арабскому языку.</p>
+                <p>Курсы по Корану и арабскому языку.</p>
             </a>
         </div>
     </main>
