Change header text to uppercase

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="hero-logo-box">
                 <img src="logo.png" alt="Ummah Logo" onerror="this.src='https://via.placeholder.com/100/c2a378/ffffff?text=Ummah'">
             </div>
-            <h1>Путь к знаниям и вере</h1>
+            <h1>ПУТЬ К ЗНАНИЯМ И ВЕРЕ</h1>
             <p>Ваш надежный проводник в мире исламского образования и духовной практики.</p>
         </div>
     </section>
