--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
     <nav>
         <a href="quran.html" class="nav-link">Коран</a>
         <a href="azan.html" class="nav-link">Намаз</a>
+        <a href="https://ru.ummahonline.org/ai.html" target="_blank" class="nav-link">ИИ Ассистент</a>
         <a href="https://markaz.ummahonline.org" target="_blank" class="nav-link">Академия</a>
     </nav>
 </header>
@@ -545,6 +546,14 @@
             </div>
             <h3>Время намаза</h3>
             <p>Точное расписание молитв для вашего местоположения.</p>
+        </a>
+
+        <a href="https://ru.ummahonline.org/ai.html" target="_blank" class="card reveal" style="--delay:.28s">
+            <div class="icon-box">
+                <svg viewBox="0 0 24 24"><path d="M12 2a2 2 0 0 1 2 2v1.1a6.5 6.5 0 0 1 4.9 6.3V15a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3v-3.6A6.5 6.5 0 0 1 10 5.1V4a2 2 0 0 1 2-2zm-2 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm4 0a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9 19h6v1a3 3 0 0 1-6 0v-1z"/></svg>
+            </div>
+            <h3>ИИ Ассистент</h3>
+            <p>Задавайте вопросы об Исламе и получайте быстрые ответы онлайн.</p>
         </a>
 
         <a href="https://markaz.ummahonline.org" target="_blank" class="card reveal" style="--delay:.34s">
