Correct title casing in hero section

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                  onerror="this.src='https://via.placeholder.com/80/c2a378/ffffff?text=U'">
         </div>
         <div class="hero-eyebrow">Добро пожаловать</div>
-        <h1 class="hero-title">ПУТЬ К ЗНАНИЯМ<br>И ВЕРЕ</h1>
+        <h1 class="hero-title">Путь к Знаниям<br>и Вере</h1>
         <p class="hero-sub">Ваш надёжный проводник в мире исламского образования и духовной практики.</p>
         <a href="quran.html" class="hero-cta">
             <span>Начать путь</span>
